--- a/Server/ChatServer/ChatServer/appsettings.json
+++ b/Server/ChatServer/ChatServer/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ChatAPP": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ChatAPP;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "ChatAPP": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ChatAPP;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
+	"DatabaseAWS": "chat-dev.c6nmfx1ztphe.us-east-1.rds.amazonaws.com;Database=ChatAPP;User Id=admin;Password=862002Cong$;"
   },
   "Jwt": {
     "ExpiresInMinutes": 300,
