--- a/Server/ChatServer/Properties/launchSettings.json
+++ b/Server/ChatServer/Properties/launchSettings.json
@@ -1,13 +1,22 @@
 {
+  "$schema": "https://json.schemastore.org/launchsettings.json",
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:41660",
+      "sslPort": 44371
+    }
+  },
   "profiles": {
     "ChatServer": {
       "commandName": "Project",
       "launchUrl": "swagger",
+      "applicationUrl": "https://localhost:7002;http://localhost:5032",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7002;http://localhost:5032"
+      "dotnetRunMessages": true
     },
     "IIS Express": {
       "commandName": "IISExpress",
@@ -22,17 +31,8 @@
       "environmentVariables": {
         "ASPNETCORE_URLS": "https://+:443;http://+:80"
       },
-      "publishAllPorts": true,
-      "useSSL": true
-    }
-  },
-  "$schema": "https://json.schemastore.org/launchsettings.json",
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:41660",
-      "sslPort": 44371
+      "useSSL": true,
+      "publishAllPorts": true
     }
   }
 }
