--- a/Server/ChatServer/appsettings.json
+++ b/Server/ChatServer/appsettings.json
@@ -6,9 +6,24 @@
     }
   },
   "AllowedHosts": "*",
+  "Kestrel": {
+    "EndpointDefaults": {
+      "Protocols": "Http1AndHttp2",
+      "SslProtocols": [ "Tls" ],
+      "ClientCertificateMode": "NoCertificate"
+    },
+    "Endpoints": {
+      "Http": {
+        "Url": "http://*:7002"
+      },
+      "Https": {
+        "Url": "https://*:7002"
+      }
+    }
+  },
   "ConnectionStrings": {
     "ChatAPP": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ChatAPP;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
-	"DatabaseAWS": "Server=chat-dev.c6nmfx1ztphe.us-east-1.rds.amazonaws.com;Database=ChatAPP;User Id=admin;Password=862002Cong$;"
+    "DatabaseAWS": "Server=chat-dev.c6nmfx1ztphe.us-east-1.rds.amazonaws.com;Database=ChatAPP;User Id=admin;Password=862002Cong$;"
   },
   "Jwt": {
     "ExpiresInMinutes": 300,
@@ -23,8 +38,15 @@
   "APIUrl": "https://localhost:44371/",
   "SecrectKey": "sbKzD8wQ8da6F2gKQc2ms7FN6aDUwbm6",
   "Kafka": {
-    "BootstrapServers": "kafka:9092,localhost:9092,localhost:29092,localhost:29092",
+    "BootstrapServers": "kafka:9092,localhost:9092",
     "GroupId": "chatapp_group",
     "ClientId": "chatapp_client"
+  },
+  "AWS": {
+    "AccessKey": "AKIA6KVQUHGZAYIFOTVY",
+    "SecretKey": "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",
+    "Region": "us-east-1",
+    "SNSTopicARN": "arn:aws:sns:us-east-1:984991676850:chat-app",
+    "SQSUrl": "https://sqs.us-east-1.amazonaws.com/984991676850/chat-app"
   }
 }
